# homeControll

./: .gitignore  CMakeLists.txt  conf.json  i2c_controller.py  i2c_input.py  i2c_pin.py  i2c_switch.py  main.py  mqtt_controller.py  settings.py  state_controller.py  state_publisher.py  test2.py
configuration/: automations.yaml  configuration.yaml  scripts.yaml  switches.yaml
scripts/: hass-io-state.service  hass-io-state.sh  hass-io.service  homeControll.service  i2c_helper.sh
scripts/configuration/: .inputs.json.swp  configuration.yaml  groups.yaml  inputs.json  switches.yaml  switches_state.yaml
scripts/docker/: docker-compose.yml
scripts/router/: setup.sh
scripts/router/files/: dnsmasq.conf  network-nat.service  network-nat.sh
